<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/rider_account_image"
            android:src="@drawable/ic_account_circle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPickupInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_point"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textPickupSnippet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opptional"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
