<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/register_bg"
    tools:context=".RegisterActivity"
    android:padding="20dp"
    android:id="@+id/root_layout">

    <LinearLayout
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dost"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/rider"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/mainTitle"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        >

        <com.rilixtech.CountryCodePicker
            android:id="@+id/ccp"
            app:ccp_dialogTextColor="@android:color/white"
            app:ccp_textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/phone_number_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="phone"
            android:inputType="phone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fb_google"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signin"
            android:text="@string/sign_in"
            android:background="@drawable/bg_login_btn"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <!--android:background="@drawable/btnsign_in"-->

        <Button
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:background="@drawable/bg_register_btn"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <!--android:background="@drawable/btn_register"-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fb_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtview_app_reg"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:weightSum="2">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_fb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:visibility="gone"

            />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_google_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtview_app_reg"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/want_rider_App"/>

</RelativeLayout>