<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_gradient"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/logo_reg"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dost_logo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/logo_reg"
        android:id="@+id/textss">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dost"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="Rider"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ask_for_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtview_app_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:layout_weight=".7"
            android:text="Have not Registered yet ?"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/register_screent_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtview_app_reg"
            android:layout_weight=".3"
            android:text="Register Here !"
            android:textSize="10sp"
            android:textStyle="italic" />

    </LinearLayout>


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardMaxElevation="10dp"
        android:layout_below="@+id/textss"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.25"
                    android:background="@android:color/background_dark"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.25"
                    android:background="@android:color/background_dark"
                    />

            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/etEmail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text=""
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="23sp"
                app:met_singleLineEllipsis="true"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/etPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="23sp"
                app:met_singleLineEllipsis="true"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/login_btn"
                />


        </LinearLayout>

    </android.support.v7.widget.CardView>



    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_above="@+id/signinButtons"
         android:visibility="gone"
         >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
             android:visibility="gone"

             >

             <com.rilixtech.CountryCodePicker
                 android:id="@+id/ccp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:ccp_dialogTextColor="@android:color/white"
                 app:ccp_textColor="@android:color/white"
                 />

             <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/phone_number_edt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
                 android:hint="@string/enter_number"
                 android:inputType="phone"/>

         </LinearLayout>

     </LinearLayout>-->

    <!--  <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/signinButtons"
          android:layout_above="@+id/fb_google"
          android:orientation="horizontal"
          android:weightSum="2"
          android:visibility="gone">

          <Button
              android:id="@+id/btn_signin"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/sign_in"
              tools:ignore="ButtonStyle" />

          <Button
              android:id="@+id/btn_register"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/register"
              tools:ignore="ButtonStyle" />

      </LinearLayout>-->

    <!-- <LinearLayout
         android:id="@+id/fb_google"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/txtview_app_reg"
         android:orientation="vertical"
         android:weightSum="2"
         android:visibility="gone">

         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_fb_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:visibility="gone"
             />

         <com.google.android.gms.common.SignInButton
             android:id="@+id/login_google_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:visibility="gone"/>

     </LinearLayout>-->

</RelativeLayout>